# qs-wallpaperengine

./: README.md  bootstrap.sh  launch-shell.sh  one.qml  run.sh
.github/workflows/: release.yml  test_release_yaml.sh
docs/: cutting-a-release.md
quickshell-module/: CMakeLists.txt  INTEGRATION.md  wallpaperenginesurface.cpp  wallpaperenginesurface.hpp  wethread.cpp  wethread.hpp
scripts/: build-we.sh  package-we.sh  test_build_we.sh  test_package_we.sh
test/: big-shot.sh  big.qml  diag.sh  floatshot.sh  fullshell-diag.sh  gdbrun.sh  launch-bg.sh  lockshot.sh  one.qml  plain.qml  run.sh  shell.qml  shot.sh  still.qml  teardown.sh  vid.qml  we-standalone.sh
we-fbo-driver/: CFboOpenGLDriver.cpp  CFboOpenGLDriver.h  CFboOutput.cpp  CFboOutput.hpp  CFboOutputViewport.cpp  CFboOutputViewport.h  CFboWindowOutput.cpp  CFboWindowOutput.h  NullMouseInput.h  README.md
